Opened 8 years ago
Closed 8 years ago
#8327 closed bug (fixed)
Haiku panics on Marvell 88E8040 driver
Reported by: | post-factum | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Drivers/Network/marvell_yukon | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | x86 |
Description
I tried to boot nightly Haiku hrev43740-x86gcc2hybrid-anyboot from USB stick and got panic.
I've attached Linux lspci output, /proc/cpuinfo content and screenshot of panic.
Attachments (4)
Change History (13)
by , 8 years ago
Attachment: | haiku_panic.jpg added |
---|
by , 8 years ago
Attachment: | lspci_short.txt added |
---|
by , 8 years ago
Attachment: | lspci_long.txt added |
---|
by , 8 years ago
Attachment: | cpuinfo.txt added |
---|
comment:1 by , 8 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 8 years ago
comment:3 by , 8 years ago
hrev43729 introduced an update to FreeBSD 9, which seems to change the type of interrupt handler installed by the driver msk, from a "filter" to a "handler" (uses of a thread).
This typically requires to implement HAIKU_CHECK_DISABLE_INTERRUPTS() and HAIKU_REENABLE_INTERRUPTS() functions. It seems empty functions would be OK, as disabling/enabling interrupts is done in the handler.
comment:5 by , 8 years ago
comment:6 by , 8 years ago
Replying to korli:
Could you please try hrev43744 or newer?
I'm using a Samsung NC10 with Marvell 88E8040. With hrev43742, I experienced the same problems as described by post-factum. However, problem seems solved with hrev43744 - no visit to KDL. Thanks!
I'm now investigating if the new version of marvell yukon driver might solve issues mentioned in #4239...
comment:8 by , 8 years ago
comment:9 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Thanks for the feedback. Also check if another bug report doesn't already exist for the strange behavior.
Additional info:
1) My laptop is Dell Inspiron 1525.
2) Haiku boots OK in safe mode.