marvell_yukon: implement HAIKU_CHECK_DISABLE_INTERRUPTS()

* hrev43729 switched the interrupt handler to a threaded handler, thus requiring
  to implement HAIKU_CHECK_DISABLE_INTERRUPTS()
* should help fixing #8327